feat(sync): enhance Notion synchronization with real-time UI feedback and duplicate prevention (#194)
* chore(conductor): Mark track 'Fix Authentication error during outbound Notion sync' as complete

* fix(conductor): Apply review suggestions for track 'Fix Authentication error during outbound Notion sync'

* conductor(plan): Mark task 'Apply review suggestions' as complete

* chore(conductor): Archive track 'Fix Authentication error during outbound Notion sync'

* Archive

* chore(conductor): Add new track 'Improve Notion sync UI feedback and progress tracking'

* fix(conductor): Enhance Notion sync UI feedback and progress tracking

* chore(conductor): Mark track 'Improve Notion sync UI feedback and progress tracking' as complete

* docs(conductor): Synchronize docs for track 'Improve Notion sync UI feedback and progress tracking'

* fix(conductor): Apply review suggestions for track 'Improve Notion sync UI feedback and progress tracking'

* conductor(plan): Mark task 'Apply review suggestions' as complete

* chore(conductor): Archive track 'Improve Notion sync UI feedback and progress tracking'

* style: Final spotless formatting cleanup

* chore(beads): Sync follow-up task

* chore(beads): Create Notion sync accuracy audit tasks

* Wrestler Sync Enhancements (#195)

* chore(beads): Create Notion sync accuracy audit tasks

* feat(sync): enhance Wrestler synchronization with Notion

Updated Wrestler schema and sync services to include:
- Alignment and core campaign stats (Drive, Resilience, Charisma, Brawl, Heritage Tag)
- Comprehensive relationship synchronization for Factions, Managers, Injuries, and Title Reigns
- Updated NpcRepository and NpcService to use Optional for safer external ID lookups
- Verified changes with updated unit and integration tests

* fix(sync): resolve test failures in arena, segment, and show template sync

- Added locationRepository.flush() in DataInitializer to ensure arenas can resolve their locations during initial load
- Updated ex